# geant4_project

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  readme.md
include/: SimpleDetector.hh  SimpleEventAction.hh  SimpleGeometry.hh  SimplePrimaryGeneratorAction.hh  SimpleRootWriter.hh  SimpleSteppingAction.hh  configs.hh
macros/: init.mac  init_vis.mac  run.mac  vis.mac
src/: SimpleDetector.cpp  SimpleEventAction.cpp  SimpleGeometry.cpp  SimplePrimaryGeneratorAction.cpp  SimpleRootWriter.cpp  SimpleSteppingAction.cpp
